--- a/index.html
+++ b/index.html
@@ -442,7 +442,15 @@
                             <p>A fun AI-powered web application that classifies your dreams using machine learning. Just enter your dream description, and get a possible category—because dreams are worth decoding!</p>
                         </div>
                     </article>
+
                     
+                    <article class="work-item">
+                        <div class="work-image">📱</div>
+                        <div class="work-content">
+                            <h3>Smart Traffic Signal System</h3>
+                            <pThe Smart Traffic Signal System is a project designed to optimize traffic flow using Dijkstra's Algorithm. It calculates the shortest path between nodes (representing traffic junctions) to ensure efficient routing, minimizing travel time and handling variable road conditions.</p>
+                        </div>
+                    </article>
 
             <section id="interests">
                 <h2>Areas of Interest</h2>
@@ -450,12 +458,13 @@
                 
                 <div class="interests">
                     <span class="interest-tag">Database Management</span>
+                    <span class="interest-tag">Computer Organisation and Architecture</span>
                     <span class="interest-tag">Programming languages</span>
                     <span class="interest-tag">Problem solving</span>
                     <span class="interest-tag">frontend developer</span>
                     <span class="interest-tag">Team Collaboration</span>
                     <span class="interest-tag">IoT Development</span>
-                    <span class="interest-tag">artificial intelligence</span>
+                    <span class="interest-tag">Artificial Intelligence</span>
                     <span class="interest-tag">Effective communication</span>
                     <span class="interest-tag">Leadership</span>
                 </div>
