--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@
                         <div class="work-image">📱</div>
                         <div class="work-content">
                             <h3>Smart Traffic Signal System</h3>
-                            <pThe Smart Traffic Signal System is a project designed to optimize traffic flow using Dijkstra's Algorithm. It calculates the shortest path between nodes (representing traffic junctions) to ensure efficient routing, minimizing travel time and handling variable road conditions.</p>
+                            </p>The Smart Traffic Signal System is a project designed to optimize traffic flow using Dijkstra's Algorithm. It calculates the shortest path between nodes (representing traffic junctions) to ensure efficient routing, minimizing travel time and handling variable road conditions.</p>
                         </div>
                     </article>
 
