--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
                 <div class="work-content">
                     <h3>Pharmacy Management System</h3>
                     <p>The Pharmacy Management System efficiently manages core operations such as inventory, sales, purchases, and employee records. It supports functionalities like stock tracking, expiry alerts, automated billing, and supplier management. With stored procedures, triggers, and a user-friendly interface, it ensures accuracy, speed, and seamless administration of pharmacy activities.</p>
-                    <p><a href="https://github.com/Rashi7903/pharmacy-management-system">View Repository</a></p>
+                    <p><a href="https://github.com/Rashi7903/Pharmacy">View Repository</a></p>
                 </div>
             </article>
             
@@ -441,7 +441,7 @@
                 <div class="work-content">
                     <h3>Dream Detector Website</h3>
                     <p>A fun AI-powered web application that classifies your dreams using machine learning. Just enter your dream description, and get a possible category—because dreams are worth decoding!</p>
-                    <p><a href="https://github.com/Rashi7903/dream-detector">View Repository</a> | <a href="https://Rashi7903.github.io/dream-detector">Live Demo</a></p>
+                    <p><a href="https://github.com/Rashi7903/dream-detector">View Repository</a> | <a href="https://rashi7903.github.io/dream-detector/">Live Demo</a></p>
                 </div>
             </article>
 
