--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
                 <div class="work-content">
                     <h3>Pharmacy Management System</h3>
                     <p>The Pharmacy Management System efficiently manages core operations such as inventory, sales, purchases, and employee records. It supports functionalities like stock tracking, expiry alerts, automated billing, and supplier management. With stored procedures, triggers, and a user-friendly interface, it ensures accuracy, speed, and seamless administration of pharmacy activities.</p>
-                    <p><a href="https://github.com/Rashi7903/Pharmacy">View Repository</a></p>
+                    <p><a href="https://github.com/Rashi7903/Pharmacy">View Repository</a>| <a href="http://localhost/pharmacy/mainpage.php">Live Demo</a></p>
                 </div>
             </article>
             
