--- a/index.html
+++ b/index.html
@@ -454,6 +454,15 @@
                     <p><a href="https://github.com/Rashi7903/Smart-Traffic-Signal-System">View Repository</a> | <a href="https://github.com/Rashi7903/Smart-Traffic-Signal-System/raw/main/project-bolt-sb1-pavexwy5.zip">Download Bolt File</a></p>
                 </div>
             </article>
+
+            <article class="work-item">
+                <div class="work-image">📱</div>
+                <div class="work-content">
+                    <h3>TIC TAC TOE</h3>
+                    <p>An interactive, animated, and responsive Tic Tac Toe game built with HTML, CSS, and JavaScript.</p>
+                    <p><a href="https://github.com/Rashi7903/tic-tac-toe">View Repository</a> | <a href="https://rashi7903.github.io/tic-tac-toe/">Live Demo</a></p>
+                </div>
+            </article>
         </div>
     </section>
 
