--- a/index.html
+++ b/index.html
@@ -492,7 +492,7 @@
             <p>Ready to collaborate on your next project? I'd love to hear from you!</p>
             
             <div class="social-links">
-                <a href="https://www.linkedin.com/in/rashi-agarwal" class="social-link" title="LinkedIn">
+                <a href="https://www.linkedin.com/in/rashi-agarwal-aa9b95325?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" class="social-link" title="LinkedIn">
                     <span>💼</span>
                 </a>
                 <a href="https://github.com/Rashi7903" class="social-link" title="GitHub">
