--- a/index.html
+++ b/index.html
@@ -463,6 +463,16 @@
                     <p><a href="https://github.com/Rashi7903/tic-tac-toe">View Repository</a> | <a href="https://rashi7903.github.io/tic-tac-toe/">Live Demo</a></p>
                 </div>
             </article>
+
+            <article class="work-item">
+                <div class="work-image">📱</div>
+                <div class="work-content">
+                    <h3>Yatzy Gmae</h3>
+                    <p>A fun and interactive web-based Yatzy game for 2 players, built using HTML, CSS, and JavaScript. Players take turns rolling dice and selecting scoring categories. The player with the highest total score wins!</p>
+                    <p><a href="https://github.com/Rashi7903/Yatzy-game">View Repository</a> | <a href="https://rashi7903.github.io/Yatzy-game/">Live Demo</a></p>
+                </div>
+            </article>
+
         </div>
     </section>
 
