--- a/index.html
+++ b/index.html
@@ -467,7 +467,7 @@
             <article class="work-item">
                 <div class="work-image">📱</div>
                 <div class="work-content">
-                    <h3>Yatzy Gmae</h3>
+                    <h3>Yatzy Game</h3>
                     <p>A fun and interactive web-based Yatzy game for 2 players, built using HTML, CSS, and JavaScript. Players take turns rolling dice and selecting scoring categories. The player with the highest total score wins!</p>
                     <p><a href="https://github.com/Rashi7903/Yatzy-game">View Repository</a> | <a href="https://rashi7903.github.io/Yatzy-game/">Live Demo</a></p>
                 </div>
